--- a/styles.css
+++ b/styles.css
@@ -444,3 +444,52 @@
     color: #000;
     text-decoration: none;
   }
+
+
+  /* Añade o modifica estas reglas en tu archivo CSS existente */
+
+@media (max-width: 768px) {
+    #dashboard {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    #incomeChart, #expenseChart {
+      position: relative;
+      height: 300px;
+      width: 100%;
+      max-width: none;
+      margin: 20px 0;
+    }
+  
+    .chart-container {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      margin-bottom: 20px;
+    }
+  
+    #paymentsList {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  
+    #paymentsList table {
+      min-width: 500px; /* Ajusta este valor según sea necesario */
+    }
+  
+    #expenseList {
+      margin-top: 20px;
+    }
+  
+    #expenseList ul {
+      max-height: 300px;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    #incomeChart, #expenseChart {
+      height: 250px;
+    }
+  }
